<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Biblioteca Maçônica</string>
    <string name="widget_description">Leitura diária da Biblioteca Maçônica</string>
</resources>
